Fix bug with throbber when the tab was not visible

--- a/src/_includes/components/throbber.css
+++ b/src/_includes/components/throbber.css
@@ -8,6 +8,3 @@ text-throbber {
 	-moz-hyphens: manual;
 	hyphens: manual;
 }
-text-throbber.finished:after {
-	content: " 🏁";
-}
